# air-quality-monitoring

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
air_qual_light/: __init__.py  cli.py  data.py  hardware_abstraction.py  led.py  sensor_request.py
config/: air_qual.conf.example  air_qual_light.conf
